Added initial support for open-meteo API, added some GitHub Repository related commands, fixed some bugs, cleaned up some code, added event notifications and keywords!